--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -61,30 +61,14 @@
 				<p><input type="text" name="search" class="search" /> <input type="submit" value="Search" class="button" /></p>
 			</form>
 		</div>
-							
-		<div id="left">
+		<div id="left_index">
+			<div id="background">
+			
 			 <%= yield %>
-
-	
-		</div>	
-		
-		<div id="right">
-			<div class="right_articles">
-				<p><img src="/images/image.gif" alt="Image" title="Image" class="image" /><b>Lorem ipsum dolor sit amet</b><br />consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam <a href="#">erat volutpat</a>. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis <a href="#">nisl ut aliquip ex</a>.</p>
 			</div>
-			<div class="right_articles">
-				<p><img src="/images/image.gif" alt="Image" title="Image" class="image" /><b>Lorem ipsum dolor sit amet</b><br />consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam <a href="#">erat volutpat</a>. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis <a href="#">nisl ut aliquip ex</a>.</p>
-			</div>
-			<div class="right_articles">
-				<p><img src="/images/image.gif" alt="Image" title="Image" class="image" /><b>Lorem ipsum dolor sit amet</b><br />consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam <a href="#">erat volutpat</a>. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis <a href="#">nisl ut aliquip ex</a>.</p>
-			</div>
-			<div class="notes">
-				<p>If you liked this template you might like some other <a href="http://templates.solucija.com/">free CSS templates</a> from <a href="http://www.solucija.com/">Solucija</a>.</p>
-			</div>
-		</div>
-		
-		<%= render :partial => 'layouts/footer' %>
 
 	</div>
+	<%= render :partial => 'layouts/footer' %>
+	
 </body>
 </html>
